# Identity_service

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/sql/: procrastinate_schema_downgrade_v3_9_0.sql
alembic/versions/: 299c5dd0304e_add_treedefaultinstruction.py  3c5e7f9a1b2d_relax_quiz_sm_version_fk_drop_obsolete_lifecycle_cols.py  4d8e1a2b3c5f_add_generation_qc_persistence_columns.py  78cfdaa3ac8f_add_qc_columns_to_study_material_.py  8d53b9242a11_initial_tables.py  a1b2c3d4e5f8_add_generation_run_lifecycle_columns.py  a3f7c1d9e2b4_add_nodeadditiveinstruction_and_hint3.py  a7b2c9d4e5f6_drop_phase2_notification_chat_pdf_parse_tables.py  b2c4d6e8f0a1_widen_studymaterialversions_generationrunid.py  b4e8f2a1c3d5_add_study_material_version_archive.py  b8c3d4e5f6a7_add_generation_runs_table.py  c3d5e7f9a1b2_persist_quiz_attempt_navigation.py  c7a2e9f41b03_add_reference_llamaparse_tables.py  c9d4e5f6a7b8_add_generation_outcome_columns.py  d0e1f2a3b4c5_add_qc_section_content_hashes.py  d4e6f8a0b2c3_add_external_research_reference.py  d4f8a2c91e07_drop_nodemedia_source_pdf_columns.py  e070ed1b4375_add_qc_columns_to_quizzes.py  e1f2a3b4c5d6_add_study_material_batch_queue_tables.py  e5f7a9b1c3d4_add_pass_threshold_and_trainee_node_unlocks.py  ec1dd70e33e8_add_new_schema_and_tables.py  f112db9fd196_drop_defaultteachinginstruction.py  f2a3b4c5d6e7_replace_batch_queue_with_batch_jobs_and_procrastinate.py  (+2 more)
tests/: test_reparent_unlocks.py  test_trainee_tree_access.py
(+119 files in other folders)
