[project]
name = "identity-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "alembic==1.18.4",
     "asyncpg==0.31.0",
     "bcrypt==4.3.0",
     "cryptography==48.0.0",
     "fastapi==0.136.1",
     "PyJWT==2.12.1",
     "passlib==1.7.4",
     "pydantic[email]==2.13.4",
     "pydantic-settings==2.14.1",
     "python-multipart==0.0.29",
     "sqlalchemy==2.0.49",
     "uvicorn==0.47.0",
     "pgsql==2.2",
     "psycopg[binary]>=3.3.4",
]
